--- a/produtos-create.html
+++ b/produtos-create.html
@@ -42,8 +42,8 @@
             <input type="file" name="imagem" id="imagem">
           </div>
           <div>
-            <label for="fabricante">FORNECEDORES</label>
-            <select name="fabricantes_id" id="fabricante"></select>
+            <label for="fornecedores">FORNECEDORES</label>
+            <select name="fornecedores_id" id="fornecdor"></select>
           </div>
           <div>
             <input type="submit" class="btn_create">
@@ -54,7 +54,7 @@
   </main>
   
   <footer>
-    <p>&copy; Todos os direitos reservados.</p>
+    <p>&copy; DIREITOS RESERVADOS.</p>
   </footer>
   <script src="./assets/js/produtos-create.js"></script>
 </body>
