--- a/produtos.html
+++ b/produtos.html
@@ -17,8 +17,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="produtos.html">Produtos</a></li>
-          <li><a href="produtos-create.html">Novo Produto</a></li>
+          <li><a href="produtos.html">PRODUTOS</a></li>
+          <li><a href="produtos-create.html">NOVO PRODUTO</a></li>
         </ul>
       </nav>
     </div>
@@ -26,12 +26,12 @@
 
   <main>
     <section>
-      <h1>Produtos</h1>
+      <h1>PRODUTOS</h1>
     </section>
   </main>
   
   <footer>
-    <p>&copy; Todos os direitos reservados.</p>
+    <p>&copy; DIREITO RESERVARDOS HIAGO E SELTON.</p>
   </footer>
   <script src="./assets/js/produtos.js"></script>
 </body>
